[tool.poetry]
name = "zogvn_utils"
version = "0.2.0"
description = "general utilities"
authors = ["Hoang Manh Tien <tienhm.0202@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
