[tool.poetry]
name = "zogutils"
version = "1.0.0"
description = "General utilities to be use in my base-fastapi template. Why ZOG? It's sound like joke and look like zoo."
authors = ["Hoang Manh Tien <tienhm.0202@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
