[tool.poetry]
name = "zogutils"
version = "1.0.4"
description = "General utilities to be use in my base-fastapi template. Why ZOG? It's sound like joke and look like zoo."
authors = ["Hoang Manh Tien <tienhm.0202@gmail.com>"]
readme = "README.md"
repository = "https://github.com/tienhm0202/zogutils"

[tool.poetry.dependencies]
python = "3.7.*"
fastapi = "0.61.1"
sentry-sdk = "0.19.0"
starlette-prometheus = "0.7.0"
piccolo-api = "0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
